// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule heading-level should contain documentation (with multiple h1) 1`] = `
Object {
  "description": "Headings must start at <h1> and can only increase one level at a time.
The headings should form a table of contents and make sense on its own.",
  "url": "https://html-validate.org/rules/heading-level.html",
}
`;

exports[`rule heading-level should contain documentation (without multiple h1) 1`] = `
Object {
  "description": "Headings must start at <h1> and can only increase one level at a time.
The headings should form a table of contents and make sense on its own.

Under the current configuration only a single <h1> can be present at a time in the document.",
  "url": "https://html-validate.org/rules/heading-level.html",
}
`;

exports[`rule heading-level smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/heading-level.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "Initial heading level must be <h1> but got <h2>",
        "offset": 1,
        "ruleId": "heading-level",
        "selector": "h2",
        "severity": 2,
        "size": 2,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 6,
        "message": "Heading level can only increase by one, expected <h3> but got <h4>",
        "offset": 73,
        "ruleId": "heading-level",
        "selector": "h4",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<h2>foo</h2>
<h3>spam</h3>
<p>lorem ipsum</p>
<h3>ham</h3>
<H2>bar</H2>
<h4>baz</h4>
",
    "warningCount": 0,
  },
]
`;
